Add Cloth Config integration and visual indicators customization